added initial orgs, repositories, and contributor_roles API endpoints
