# src/swagger/v0-openapi-template.json
@@ -232,7 +232,7 @@
           },
           "requested": {
             "type": "string",
-            "description": "The path that was called (e.g. '/dmps/10.12345/ABC123')"
+            "description": "The path that was called (e.g. '/funders?search=foo')"
           },
           "requested_at": {
             "type": "string",
@@ -259,6 +259,162 @@
             "description": "The user",
             "items": {
               "$ref": "#/components/schemas/Funder"
+            }
+          },
+          "errors": {
+            "type": "array",
+            "description": "Error messages",
+            "items": {
+              "type": "string",
+              "description": "An error message",
+              "example": "You are not authorized to perform this action"
+            }
+          }
+        },
+        "required": ["status", "requested", "requested_at", "page", "per_page", "total_items"]
+      },
+
+      "AffiliationResponse": {
+        "type": "object",
+        "properties": {
+          "status": {
+            "type": "integer",
+            "format": "int32",
+            "description": "The status code (e.g. 200, 201, 404, etc.)"
+          },
+          "requested": {
+            "type": "string",
+            "description": "The path that was called (e.g. '/orgs?search=foo')"
+          },
+          "requested_at": {
+            "type": "string",
+            "format": "date-time",
+            "description": "The ISO 8601 date and time the request was processed (e.g. 2023-02-08T18:49:45621UTC)"
+          },
+          "total_items": {
+            "type": "integer",
+            "format": "int32",
+            "description": "The total number of returnable items (regardless of current pagination settings)"
+          },
+          "page": {
+            "type": "integer",
+            "format": "int32",
+            "description": "The current page"
+          },
+          "per_page": {
+            "type": "integer",
+            "format": "int32",
+            "description": "The number of items per page (min - 1, max - 250, default - 25)"
+          },
+          "items": {
+            "type": "array",
+            "description": "The user",
+            "items": {
+              "$ref": "#/components/schemas/Affiliation"
+            }
+          },
+          "errors": {
+            "type": "array",
+            "description": "Error messages",
+            "items": {
+              "type": "string",
+              "description": "An error message",
+              "example": "You are not authorized to perform this action"
+            }
+          }
+        },
+        "required": ["status", "requested", "requested_at", "page", "per_page", "total_items"]
+      },
+
+      "RepositoryResponse": {
+        "type": "object",
+        "properties": {
+          "status": {
+            "type": "integer",
+            "format": "int32",
+            "description": "The status code (e.g. 200, 201, 404, etc.)"
+          },
+          "requested": {
+            "type": "string",
+            "description": "The path that was called (e.g. '/repositories?search=foo')"
+          },
+          "requested_at": {
+            "type": "string",
+            "format": "date-time",
+            "description": "The ISO 8601 date and time the request was processed (e.g. 2023-02-08T18:49:45621UTC)"
+          },
+          "total_items": {
+            "type": "integer",
+            "format": "int32",
+            "description": "The total number of returnable items (regardless of current pagination settings)"
+          },
+          "page": {
+            "type": "integer",
+            "format": "int32",
+            "description": "The current page"
+          },
+          "per_page": {
+            "type": "integer",
+            "format": "int32",
+            "description": "The number of items per page (min - 1, max - 250, default - 25)"
+          },
+          "items": {
+            "type": "array",
+            "description": "The user",
+            "items": {
+              "$ref": "#/components/schemas/Repository"
+            }
+          },
+          "errors": {
+            "type": "array",
+            "description": "Error messages",
+            "items": {
+              "type": "string",
+              "description": "An error message",
+              "example": "You are not authorized to perform this action"
+            }
+          }
+        },
+        "required": ["status", "requested", "requested_at", "page", "per_page", "total_items"]
+      },
+
+      "ContributorRoleResponse": {
+        "type": "object",
+        "properties": {
+          "status": {
+            "type": "integer",
+            "format": "int32",
+            "description": "The status code (e.g. 200, 201, 404, etc.)"
+          },
+          "requested": {
+            "type": "string",
+            "description": "The path that was called (e.g. '/contributor_roles')"
+          },
+          "requested_at": {
+            "type": "string",
+            "format": "date-time",
+            "description": "The ISO 8601 date and time the request was processed (e.g. 2023-02-08T18:49:45621UTC)"
+          },
+          "total_items": {
+            "type": "integer",
+            "format": "int32",
+            "description": "The total number of returnable items (regardless of current pagination settings)"
+          },
+          "page": {
+            "type": "integer",
+            "format": "int32",
+            "description": "The current page"
+          },
+          "per_page": {
+            "type": "integer",
+            "format": "int32",
+            "description": "The number of items per page (min - 1, max - 250, default - 25)"
+          },
+          "items": {
+            "type": "array",
+            "description": "The user",
+            "items": {
+              "$ref": "#/components/schemas/Affiliation"
             }
           },
           "errors": {
@@ -355,7 +511,7 @@
           "name": {
             "type": "string",
             "description": "Name of the institution",
-            "example": "University of Exampleland"
+            "example": "National Institutes of Health (nih.gov)"
           },
           "funder_id": {
             "type": "object",
@@ -364,7 +520,7 @@
               "identifier": {
                 "type": "string",
                 "description": "The value of the identifier",
-                "example": "https://ror.org/zzz000z"
+                "example": "https://api.crossref.org/funders/100000002"
               },
               "type": {
                 "type": "string",
@@ -391,6 +547,101 @@
             "example": "Please enter your research project title"
           },
           "required": ["name", "funder_id"]
+        }
+      },
+
+      "Affiliation": {
+        "type": "object",
+        "title": "An institution or organization",
+        "properties": {
+          "name": {
+            "type": "string",
+            "description": "Name of the entity",
+            "example": "University of Exampleland"
+          },
+          "affiliation_id": {
+            "type": "object",
+            "description": "A unique identifier for the entity",
+            "properties": {
+              "identifier": {
+                "type": "string",
+                "description": "The value of the identifier",
+                "example": "https://ror.org/zzz000z"
+              },
+              "type": {
+                "type": "string",
+                "enum": ["ror", "other"],
+                "description": "Identifier type. Allowed values: ror, other",
+                "example": "ror"
+              }
+            },
+            "required": ["identifier", "type"]
+          },
+          "required": ["name", "affiliation_id"]
+        }
+      },
+
+      "Repository": {
+        "type": "object",
+        "title": "A repository for reasearch outputs (e.g. datasets, audio visual files, software, etc.)",
+        "properties": {
+          "title": {
+            "type": "string",
+            "description": "Title of the repository",
+            "example": "Dryad"
+          },
+          "description": {
+            "type": "string",
+            "description": "A description of the repository",
+            "example": "Dryad is an international repository of data …"
+          },
+          "url": {
+            "type": "string",
+            "description": "The homepage of the repository",
+            "example": "https://datadryad.org"
+          },
+          "dmproadmap_host_id": {
+            "type": "object",
+            "description": "A unique identifier for the repository from a registry system",
+            "properties": {
+              "identifier": {
+                "type": "string",
+                "description": "The value of the identifier",
+                "example": "https://www.re3data.org/repository/r3d100000044"
+              },
+              "type": {
+                "type": "string",
+                "enum": ["url", "other"],
+                "description": "Identifier type. Allowed values: url, other",
+                "example": "url"
+              }
+            },
+            "required": ["identifier", "type"]
+          },
+          "required": ["name", "url"]
+        }
+      },
+
+      "ContributorRole": {
+        "type": "object",
+        "title": "A role that the contributor plays on the research project",
+        "properties": {
+          "label": {
+            "type": "string",
+            "description": "The human readable name for the role",
+            "example": "Principal Investigator"
+          },
+          "value": {
+            "type": "string",
+            "description": "The unique identifier of the role",
+            "example": "https://credit.niso.org/contributor-roles/investigation"
+          },
+          "default": {
+            "type": "string",
+            "description": "Whether or not the role is a default",
+            "enum": ["true", "false"]
+          },
+          "required": ["label", "value"]
         }
       }
     }
@@ -424,11 +675,157 @@
         ],
         "responses": {
           "200": {
-            "description": "The Funder's name, acronym, alias, or homepage url",
+            "description": "The Funder's name, unique id, and information about its API (if applicable)",
             "content": {
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/FunderResponse"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/StandardError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/orgs": {
+      "servers": [
+        {
+          "description": "DMPHub development instance",
+          "url": "https://api.dmphub-dev.cdlib.org"
+        }
+      ],
+      "get": {
+        "tags": [
+          "UI support operations"
+        ],
+        "operationId": "GetOrgs",
+        "description": "Performs a search for instituions/organizations whose name/alias match the search term",
+        "parameters": [
+          { "$ref": "#/components/parameters/searchParam" },
+          { "$ref": "#/components/parameters/pageParam" },
+          { "$ref": "#/components/parameters/perPageParam" }
+        ],
+        "security": [
+          {
+            "Authorizer": [
+              "https://auth.dmphub-dev.cdlib.org/dev.read"
+            ]
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The Affiliation's name and unique identifier",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AffiliationResponse"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/StandardError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/repositories": {
+      "servers": [
+        {
+          "description": "DMPHub development instance",
+          "url": "https://api.dmphub-dev.cdlib.org"
+        }
+      ],
+      "get": {
+        "tags": [
+          "UI support operations"
+        ],
+        "operationId": "GetRepositories",
+        "description": "Performs a search for repositories whose name/alias match the search term",
+        "parameters": [
+          { "$ref": "#/components/parameters/searchParam" },
+          { "$ref": "#/components/parameters/pageParam" },
+          { "$ref": "#/components/parameters/perPageParam" }
+        ],
+        "security": [
+          {
+            "Authorizer": [
+              "https://auth.dmphub-dev.cdlib.org/dev.read"
+            ]
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The Repository title, description, url and unique identifier",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RepositoryResponse"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/StandardError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/contributor_roles": {
+      "servers": [
+        {
+          "description": "DMPHub development instance",
+          "url": "https://api.dmphub-dev.cdlib.org"
+        }
+      ],
+      "get": {
+        "tags": [
+          "UI support operations"
+        ],
+        "operationId": "GetContributorRoles",
+        "description": "Fetches all of the possible roles for the contributor",
+        "parameters": [
+          { "$ref": "#/components/parameters/pageParam" },
+          { "$ref": "#/components/parameters/perPageParam" }
+        ],
+        "security": [
+          {
+            "Authorizer": [
+              "https://auth.dmphub-dev.cdlib.org/dev.read"
+            ]
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The label, value and whether or not the role is a default role",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ContributorRoleResponse"
                 }
               }
             }
